<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.newcircle.yamba.StatusActivity">
    <item
        android:id="@+id/action_post"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="always"
        android:title="Post"/>
</menu>